--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta name="keywords" content="3d, impresion, realismo, diseños, novedad, avances, filamentos, resina, distincion, originalidad, diseños personalizados, velocidad, buena calidad, didactico, friki, geek, desarrolo motriz, primeros años, modelismo, cosplay, articulos del hogar">
     <meta name="description" content="En GNESIS nos encargamos de realizar los mejores productos al mejor precio">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="img/products/Logo_Gnesis.png" type="image/x-icon">
   </head>
   <body>
     <header>
@@ -51,6 +53,7 @@
           </nav>
     </header>
     <main>
+        <h1>Nuestros productos</h1>
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -118,6 +121,7 @@
         
         <div class="legal">
           <p>&copy; 2022 GNESIS. Todos los derechos reservados.</p>
+          <p>Sitio desarrollado por Gervasio Brocal.</p>
         </div>
       </footer>
 
